Segmentation fault switching screen layout from python #35434

Closed
opened 2013-05-19 19:13:21 +02:00 by Vince Gatto · 7 comments

%%%--- Operating System, Graphics card ---

Operating System: OS X 10.8.2
Processor: 2.7 GHz Intel Core i7
Graphics Card: NVIDIA GeForce GT 650M 1024 MB

- Blender version with error, and version that worked ---

2.67 (it's the only version I've ever used), downloaded from the blender website.

- Short description of error ---

Switching the screen layout from a command line invocation of blender causes a segmentation fault.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Run the following command:

blender --python crash.py

The crash.py script is only these two lines:

import bpy
bpy.context.window.screen = bpy.data.screens['Scripting']

If you start blender and run this from the python console, it works fine, it's just the command line version that doesn't work. It also does not seem to crash if --background is supplied.

%%%

%%%--- Operating System, Graphics card --- Operating System: OS X 10.8.2 Processor: 2.7 GHz Intel Core i7 Graphics Card: NVIDIA GeForce GT 650M 1024 MB - Blender version with error, and version that worked --- 2.67 (it's the only version I've ever used), downloaded from the blender website. - Short description of error --- Switching the screen layout from a command line invocation of blender causes a segmentation fault. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Run the following command: blender --python crash.py The crash.py script is only these two lines: import bpy bpy.context.window.screen = bpy.data.screens['Scripting'] If you start blender and run this from the python console, it works fine, it's just the command line version that doesn't work. It also does not seem to crash if --background is supplied. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Well obviously screen layouts shouldn't be switched without UI... should be easy to ensure it gets ignored.%%%

%%%Well obviously screen layouts shouldn't be switched without UI... should be easy to ensure it gets ignored.%%%

%%%there is a UI since --python doesn't imply --background,

fixed r56923.%%%

%%%there is a UI since --python doesn't imply --background, fixed r56923.%%%
Member

%%%That fix is not working, i also don't think handlers should be freed there.

See this report:
http://projects.blender.org/tracker/?func=detail&atid=498&aid=35481&group_id=9

I'll check this crasher too, maybe I see where the issue is.%%%

%%%That fix is not working, i also don't think handlers should be freed there. See this report: http://projects.blender.org/tracker/?func=detail&atid=498&aid=35481&group_id=9 I'll check this crasher too, maybe I see where the issue is.%%%
Member

%%%Hrm, I don't it to crash, but also not doing anything (it should set the screen to scripting?)%%%

%%%Hrm, I don't it to crash, but also not doing anything (it should set the screen to scripting?)%%%

%%%Committed change to free only popup handlers r57204.
closing.%%%

%%%Committed change to free only popup handlers r57204. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#35434
No description provided.