fix [#35434] Segmentation fault switching screen layout from python